qc pass: mspw cw over confed bgp
qc pass: mspw cw over bgp route server
qc pass: mspw cw over bgp with soft-reconfig
---------------------------------- 2026-02-01 16:34:45 26.2.1
qc pass: mspw partial over ebgp
qc pass: mspw partial over ibgp
qc pass: mspw partial over bgp additional path
qc pass: mspw partial over ibgp rr
qc pass: mspw partial over confed bgp
qc pass: mspw partial over bgp route server
qc pass: mspw partial over bgp with soft-reconfig
qc pass: mspw mixed over ebgp
qc pass: mspw mixed over ibgp
qc pass: mspw mixed over bgp additional path
qc pass: mspw mixed over ibgp rr
qc pass: mspw mixed over confed bgp
qc pass: mspw mixed over bgp route server
qc pass: mspw mixed over bgp with soft-reconfig
---------------------------------- 2026-02-01 16:59:01 26.2.1
no qc pass: interop2: bgp extended nexthop
no qc pass: interop2: bgp aigp
no qc pass: interop2: bgp vpnv6 over srv6
qc pass: interop2: mspw over bgp
qc pass: interop2: bgp 6pe
qc pass: interop2: bgp with php labels
---------------------------------- 2026-02-01 17:13:51 26.2.1
no qc pass: interop2: bgp with php labels
no qc pass: interop2: bgp 6pe
qc pass: interop2: bgp vpnv6 over srv6
qc pass: interop2: bgp aigp
qc pass: interop2: bgp extended nexthop
---------------------------------- 2026-02-01 17:34:59 26.2.1
no qc pass: evpn/pbb+vpls/cmac over ebgp
qc pass: interop9: mspw over bgp
qc pass: evpn/pbb+evpn/cmac over ebgp
---------------------------------- 2026-02-01 17:56:30 26.2.1
qc pass: p4lang: mspw with bgp
---------------------------------- 2026-02-01 18:25:35 26.2.1
qc pass: p4lang: vlan mspw with bgp
qc pass: p4lang: bundle vlan mspw with bgp
---------------------------------- 2026-02-01 18:55:06 26.2.1
qc pass: p4lang: hairpin mspw with bgp
qc pass: p4lang: hairpin vlan mspw with bgp
qc pass: p4lang: qinq mspw with bgp
qc pass: p4lang: bundle qinq mspw with bgp
qc pass: p4lang: routed mspw with bgp
qc pass: p4lang: routed vlan mspw with bgp
qc pass: p4lang: routed qinq mspw with bgp