@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.2.1-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-02-01 19:08:04, took 00:12:58, with 50 workers, on 4276 cases, 0 failed, 0 traces, 2 retries
+-;-;-;2026-02-01 19:29:30, took 00:15:50, with 50 workers, on 4278 cases, 0 failed, 0 traces, 5 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -2653,6 +2653,8 @@ http://sources.freertr.org/cfg/p4lang-rout521.tst;p4lang-rout521.tst;success;p4l
 http://sources.freertr.org/cfg/p4lang-rout522.tst;p4lang-rout522.tst;success;p4lang: routed mspw with bgp
 http://sources.freertr.org/cfg/p4lang-rout523.tst;p4lang-rout523.tst;success;p4lang: routed vlan mspw with bgp
 http://sources.freertr.org/cfg/p4lang-rout524.tst;p4lang-rout524.tst;success;p4lang: routed qinq mspw with bgp
+http://sources.freertr.org/cfg/p4lang-rout525.tst;p4lang-rout525.tst;success;p4lang: mspw over backplane
+http://sources.freertr.org/cfg/p4lang-rout526.tst;p4lang-rout526.tst;success;p4lang: routed mspw over backplane
 http://sources.freertr.org/cfg/qos-action01.tst;qos-action01.tst;success;qos ingress transmit action
 http://sources.freertr.org/cfg/qos-action02.tst;qos-action02.tst;success;qos egress transmit action
 http://sources.freertr.org/cfg/qos-action03.tst;qos-action03.tst;success;qos ingress drop action
