@@ -2649,6 +2649,8 @@ qc pass: p4lang: bundle qinq mspw with bgp
 qc pass: p4lang: routed mspw with bgp
 qc pass: p4lang: routed vlan mspw with bgp
 qc pass: p4lang: routed qinq mspw with bgp
+qc pass: p4lang: mspw over backplane
+qc pass: p4lang: routed mspw over backplane
 qc pass: qos ingress transmit action
 qc pass: qos egress transmit action
 qc pass: qos ingress drop action
