@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.2.1-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-02-01 19:08:04, took 00:12:58, with 50 workers, on 4276 cases, 0 failed, 0 traces, 2 retries<br/>
+tested: 2026-02-01 19:29:30, took 00:15:50, with 50 workers, on 4278 cases, 0 failed, 0 traces, 5 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -2665,6 +2665,8 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout522.tst">p4lang-rout522.tst</a></td><td>success</td><td>p4lang: routed mspw with bgp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout523.tst">p4lang-rout523.tst</a></td><td>success</td><td>p4lang: routed vlan mspw with bgp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout524.tst">p4lang-rout524.tst</a></td><td>success</td><td>p4lang: routed qinq mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout525.tst">p4lang-rout525.tst</a></td><td>success</td><td>p4lang: mspw over backplane</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout526.tst">p4lang-rout526.tst</a></td><td>success</td><td>p4lang: routed mspw over backplane</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-action01.tst">qos-action01.tst</a></td><td>success</td><td>qos ingress transmit action</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-action02.tst">qos-action02.tst</a></td><td>success</td><td>qos egress transmit action</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-action03.tst">qos-action03.tst</a></td><td>success</td><td>qos ingress drop action</td></tr>
