@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.2.1-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-02-01 15:53:29, took 00:10:04, with 50 workers, on 865 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2026-02-01 19:43:34, took 00:13:35, with 50 workers, on 877 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
@@ -867,3 +867,15 @@ http://sources.freertr.org/cfg/p4lang-rout511.tst;p4lang-rout511.tst;success;p4l
 http://sources.freertr.org/cfg/p4lang-rout512.tst;p4lang-rout512.tst;success;p4lang: ttlset out
 http://sources.freertr.org/cfg/p4lang-rout513.tst;p4lang-rout513.tst;success;p4lang: vlan ttlset out
 http://sources.freertr.org/cfg/p4lang-rout514.tst;p4lang-rout514.tst;success;p4lang: qinq ttlset out
+http://sources.freertr.org/cfg/p4lang-rout515.tst;p4lang-rout515.tst;success;p4lang: mspw with bgp
+http://sources.freertr.org/cfg/p4lang-rout516.tst;p4lang-rout516.tst;success;p4lang: vlan mspw with bgp
+http://sources.freertr.org/cfg/p4lang-rout517.tst;p4lang-rout517.tst;success;p4lang: bundle vlan mspw with bgp
+http://sources.freertr.org/cfg/p4lang-rout518.tst;p4lang-rout518.tst;success;p4lang: hairpin mspw with bgp
+http://sources.freertr.org/cfg/p4lang-rout519.tst;p4lang-rout519.tst;success;p4lang: hairpin vlan mspw with bgp
+http://sources.freertr.org/cfg/p4lang-rout520.tst;p4lang-rout520.tst;success;p4lang: qinq mspw with bgp
+http://sources.freertr.org/cfg/p4lang-rout521.tst;p4lang-rout521.tst;success;p4lang: bundle qinq mspw with bgp
+http://sources.freertr.org/cfg/p4lang-rout522.tst;p4lang-rout522.tst;success;p4lang: routed mspw with bgp
+http://sources.freertr.org/cfg/p4lang-rout523.tst;p4lang-rout523.tst;success;p4lang: routed vlan mspw with bgp
+http://sources.freertr.org/cfg/p4lang-rout524.tst;p4lang-rout524.tst;success;p4lang: routed qinq mspw with bgp
+http://sources.freertr.org/cfg/p4lang-rout525.tst;p4lang-rout525.tst;success;p4lang: mspw over backplane
+http://sources.freertr.org/cfg/p4lang-rout526.tst;p4lang-rout526.tst;success;p4lang: routed mspw over backplane
