@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.2.1-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-02-01 15:53:29, took 00:10:04, with 50 workers, on 865 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2026-02-01 19:43:34, took 00:13:35, with 50 workers, on 877 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -879,4 +879,16 @@ jvm: ./rtr.bin, other: udp<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout512.tst">p4lang-rout512.tst</a></td><td>success</td><td>p4lang: ttlset out</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout513.tst">p4lang-rout513.tst</a></td><td>success</td><td>p4lang: vlan ttlset out</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout514.tst">p4lang-rout514.tst</a></td><td>success</td><td>p4lang: qinq ttlset out</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout515.tst">p4lang-rout515.tst</a></td><td>success</td><td>p4lang: mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout516.tst">p4lang-rout516.tst</a></td><td>success</td><td>p4lang: vlan mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout517.tst">p4lang-rout517.tst</a></td><td>success</td><td>p4lang: bundle vlan mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout518.tst">p4lang-rout518.tst</a></td><td>success</td><td>p4lang: hairpin mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout519.tst">p4lang-rout519.tst</a></td><td>success</td><td>p4lang: hairpin vlan mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout520.tst">p4lang-rout520.tst</a></td><td>success</td><td>p4lang: qinq mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout521.tst">p4lang-rout521.tst</a></td><td>success</td><td>p4lang: bundle qinq mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout522.tst">p4lang-rout522.tst</a></td><td>success</td><td>p4lang: routed mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout523.tst">p4lang-rout523.tst</a></td><td>success</td><td>p4lang: routed vlan mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout524.tst">p4lang-rout524.tst</a></td><td>success</td><td>p4lang: routed qinq mspw with bgp</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout525.tst">p4lang-rout525.tst</a></td><td>success</td><td>p4lang: mspw over backplane</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout526.tst">p4lang-rout526.tst</a></td><td>success</td><td>p4lang: routed mspw over backplane</td></tr>
 </tbody></table></body></html>
